Agregar estilos basicos para una buena pagina

--- a/css/mis_estilos.css
+++ b/css/mis_estilos.css
@@ -1,12 +1,21 @@
-.verde {
-    color: green;
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+
+body {
+    margin: 0 auto;
+    max-width: 50em;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    line-height: 1.5;
+    padding: 4em 1em;
+    color: #555;
 }
 
-.verde:hover {
-    color: lawngreen;
+h2 {
+    margin-top: 1em;
+    padding-top: 1em;
 }
 
-#titulo {
-    color: indigo;
-
+h1,
+h2,
+strong {
+    color: #333;
 }
